--- a/Generations.html
+++ b/Generations.html
@@ -32,7 +32,7 @@
 		
 		<h3 class="hop">Поколения 911-ых</h3>
 		
-		<p class="thumb" style="text-align:left">
+		<p class="thumb" style="text-align:center">
 		<a href="901.html">
 		<img src="image\porsche901.jpg" alt="Porsche 901" style="width:25%;" align="middle">
 	Porsche 901
@@ -40,7 +40,7 @@
 		</p>
 		
 		
-		<p class="thumb" style="text-align:left">
+		<p class="thumb" style="text-align:center">
 		<a href="930.html">
 		<img src="image\porsche930.jpg" alt="Porsche 930" style="width:25%;" align="middle">
 	Porsche 930
@@ -48,7 +48,7 @@
 		</p>
 		
 		
-		<p class="thumb" style="text-align:left">
+		<p class="thumb" style="text-align:center">
 		<a href="964.html">
 		<img src="image\porsche964.jpg" alt="Porsche 964" style="width:25%;" align="middle">
 	Porsche 964
@@ -56,7 +56,7 @@
 		</p>
 		
 		
-		<p class="thumb" style="text-align:left">
+		<p class="thumb" style="text-align:center">
 		<a href="993.html">
 		<img src="image\porsche993.jpg" alt="Porsche 993" style="width:25%;" align="middle">
 	Porsche 993
@@ -64,7 +64,7 @@
 		</p>
 		
 		
-		<p class="thumb" style="text-align:left">
+		<p class="thumb" style="text-align:center">
 		<a href="996.html">
 		<img src="image\porsche996.jpg" alt="Porsche 996" style="width:25%;" align="middle">
 	Porsche 996
@@ -72,7 +72,7 @@
 		</p>
 		
 		
-		<p class="thumb" style="text-align:left">
+		<p class="thumb" style="text-align:center">
 		<a href="997.html">
 		<img src="image\porsche997.jpg" alt="Porsche 997" style="width:25%;" align="middle">
 	Porsche 997
@@ -80,7 +80,7 @@
 		</p>
 		
 		
-		<p class="thumb" style="text-align:left">
+		<p class="thumb" style="text-align:center">
 		<a href="991.html">
 		<img src="image\porsche991.jpg" alt="Porsche 991" style="width:25%;" align="middle">
 	Porsche 991
@@ -88,7 +88,7 @@
 		</p>
 		
 		
-		<p class="thumb" style="text-align:left">
+		<p class="thumb" style="text-align:center">
 		<a href="992.html">
 		<img src="image\porsche992.jpg" alt="Porsche 992" style="width:25%;" align="middle">	
 	Porsche 992
